gcc/testsuite/gm2/pim/pass/forloopnulchar.mod
MODULE forloopnulchar ;

VAR
   ch: CHAR ;
BEGIN
   FOR ch := '' TO 'z' DO
   END
END forloopnulchar.
