gcc/testsuite/gm2/pim/fail/missingquote.mod
MODULE missingquote ;

CONST
   MyConst = 'foobar

BEGIN

END missingquote.
